# PyQtDarkTheme2

./: README.md  pyproject.toml
qdarktheme/: __init__.py
